# awaiter-trait

./: Cargo.toml  README.md
corosensei-awaiter-trait/: Cargo.toml
corosensei-awaiter-trait/src/: lib.rs
src/: dyn.rs  io.rs  lib.rs
