[package]
name = "awaiter-trait"
version = "0.3.0-alpha.1"
edition = "2024"
license = "CC0-1.0"
description = "Traits for blocking on futures"

[dependencies]
embedded-io-async = { version = "0.7", optional = true }
embedded-io = { version = "0.7", optional = true }

[features]
embedded-io = ["dep:embedded-io-async","dep:embedded-io"]

[workspace]
members=[".", "corosensei-awaiter-trait"]
